Home: Html basic done.

--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -1,1 +1,20 @@
-<p>homeURL</p>
+<div  class='part'>
+	<h1 class='website-title'>{{home.title}}</h1>
+</div>
+<div class='part'>
+	<ul class='quotes'>
+		<!-- start of repeat in quotes -->
+		<li ng-repeat='quote in home.content.quotes'>
+			<h3>{{quote}}</h3>
+		</li>
+	</ul>
+<div>
+<div class='part'>
+	<h2>Sense</h2>
+	<ul>
+		<!-- start of repeat in sense_nave -->
+		<li ng-repeat='nav in home.content.sense_nav'>
+			<a ng-href="/{{nav.slug}}"> {{nav.name}}</a>
+		</li>
+	</ul>
+</div>
