About and Calender Basic

--- a/inc/html/about.html
+++ b/inc/html/about.html
@@ -1,1 +1,4 @@
-<h1>AboutURL</h1>
+<div class='part' ng-repeat="post in model.content.posts">
+	<h3>{{post.post_title}}</h3>
+	<p>{{post.post_content}}</p>
+<div>
