--- a/inc/html/contact.html
+++ b/inc/html/contact.html
@@ -1,1 +1,16 @@
-<h1>Contact Url</h1>
+<div class='part part-lg-fh'>
+	<!-- Viewed event -->
+	<h3>{{model.content.contact[0].post_content}}</h3>
+	<ul>
+		<li>{{model.content.contact[0].Email}}</li>
+		<li>{{model.content.contact[0].Post}}</li>
+		<li>{{model.content.contact[0].Telephone}}</li>
+	</ul>
+</div>
+<div class='part part-lg-fh'>
+	<!-- contact form -->
+	<p> contact form </p>
+</div>
+
+
+
