--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -1,19 +1,19 @@
-<div  class='part'>
-	<h1 class='website-title'>{{model.title}}</h1>
+<div  class='part part-lg-hh'>
+	<h1 class='website-title'>{{model.blog_title}}</h1>
 </div>
-<div class='part'>
+<div class='part part-lg-hh'>
 	<ul class='quotes'>
 		<!-- start of repeat in quotes -->
-		<li ng-repeat='quote in model.content.quotes'>
+		<li ng-repeat='quote in model.content[0].content.quotes'>
 			<h3>{{quote}}</h3>
 		</li>
 	</ul>
-<div>
-<div class='part'>
+</div>
+<div class='part part-lg-hh'>
 	<h2>Sense</h2>
 	<ul>
 		<!-- start of repeat in sense_nave -->
-		<li ng-repeat='nav in model.content.sense_nav'>
+		<li ng-repeat='nav in model.content[0].content.sense_nav'>
 			<a ng-href="/{{nav.slug}}"> {{nav.name}}</a>
 		</li>
 	</ul>
