--- a/inc/html/contact.html
+++ b/inc/html/contact.html
@@ -1,4 +1,4 @@
-<div class='part part-lg-fh'>
+<div class='part part-lg-f part-lg--h'>
 	<!-- Viewed event -->
 	<h3>{{model.content.contact[0].post_content}}</h3>
 	<ul>
@@ -7,7 +7,7 @@
 		<li>{{model.content.contact[0].Telephone}}</li>
 	</ul>
 </div>
-<div class='part part-lg-fh'>
+<div class='part part-lg-f part-lg--h'>
 	<!-- contact form -->
 	<p> contact form </p>
 </div>
