--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -1,7 +1,7 @@
-<div  class='part part-lg-hh'>
+<div  class='part part-lg-h part-lg--h'>
 	<h1 class='website-title'>{{model.blog_title}}</h1>
 </div>
-<div class='part part-lg-hh'>
+<div class='part part-lg-h part-lg--h'>
 	<ul class='quotes'>
 		<!-- start of repeat in quotes -->
 		<li ng-repeat='quote in model.content[0].content.quotes'>
@@ -9,7 +9,7 @@
 		</li>
 	</ul>
 </div>
-<div class='part part-lg-hh'>
+<div class='part part-lg-h part-lg--h'>
 	<h2>Sense</h2>
 	<ul>
 		<!-- start of repeat in sense_nave -->
