--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -1,19 +1,15 @@
-<div  class='part part-lg-h part-lg--h'>
-	<h1 class='website-title'>{{model.blog_title}}</h1>
-</div>
-<div class='part part-lg-h part-lg--h'>
-	<ul class='quotes'>
+<div  class='part part-lg-f part-lg--h part-noptop text-center'>
+	<h1 class='website-title '>{{model.blog_title}}</h1>
+
+	<ul class='quotes' quoutes>
 		<!-- start of repeat in quotes -->
-		
-		<li>
-			<h3>{{model.content[0].content.quotes[1]}}</h3>
-		</li>
-		<!--<li ng-repeat='quote in model.content[0].content.quotes' ng-hide='{{show}}'>
+	
+		<li ng-repeat='quote in model.content[0].content.quotes' ng-show='{{quote.show}}'>
 			<h3>{{quote}}</h3>
-		</li>-->
+		</li>
 	</ul>
 </div>
-<div class='part part-lg-h part-lg--h'>
+<div class='part part-lg-h part-lg--h part-mpleft'>
 	<h2>Sense</h2>
 	<ul>
 		<!-- start of repeat in sense_nave -->
