--- a/inc/html/about.html
+++ b/inc/html/about.html
@@ -1,4 +1,3 @@
-<div class='part part-lg-h part-lg--h' ng-repeat="post in model.content.posts">
+<div class='part part-lg-h part-lg--h' ng-repeat="post in model.content.posts" section-select>
 	<h3>{{post.post_title}}</h3>
-	<p>{{post.post_content}}</p>
 <div>
