--- a/inc/html/about.html
+++ b/inc/html/about.html
@@ -1,11 +1,11 @@
-<div class='part part-lg-h part-lg--h' section-select="model.content.mainbool" ng-show="model.content.mainbool">
+<div class='part part-lg-h part-lg--h' section-select="model.content.main,model.content.posts" ng-show="model.content.main.mainbool">
 	<h3>{{model.content.main.post_title}}</h3>
 </div>
 
-<div class='part part-lg-h part-lg--h' section-select ng-show="model.content.mainbool">
+<div class='part part-lg-h part-lg--h' section-select="model.content.main,model.content.posts" ng-show="model.content.main.mainbool">
 	<p>{{model.content.main.post_content}}</p>
 </div>
 
-<div class='part part-lg-h part-lg--h' ng-repeat="post in model.content.posts | orderBy:post.post_date:true" section-select>
+<div class='part part-lg-h part-lg--h' ng-repeat="post in model.content.posts | orderBy:post.post_date:true" section-select="post,model.content.main,model.content.posts">
 	<h3>{{post.post_title}}</h3>
 </div>
