--- a/inc/html/about.html
+++ b/inc/html/about.html
@@ -1,11 +1,16 @@
-<div class='part part-lg-h part-lg--h' section-select="model.content.main,model.content.posts,~" ng-show="model.content.main.mainbool">
-	<h3>{{model.content.main.post_title}}</h3>
+<!-- About -->
+<div class='part part-lg-h part-lg--h' section-select="model.content.main,model.content.posts,~" ng-show="model.content.main.selected">
+	<a ng-href='#/about/~'>
+		<h3>{{model.content.main.post.post_title}}</h3>
+	</a>
 </div>
 
-<div class='part part-lg-h part-lg--h' section-select="model.content.main,model.content.posts,~" ng-show="model.content.main.mainbool">
-	<p>{{model.content.main.post_content}}</p>
+<div class='part part-lg-h part-lg--h' section-select ng-show="model.content.main.selected">
+	<p>{{model.content.main.post.post_content}}</p>
 </div>
 
-<div class='part part-lg-h part-lg--h' ng-hide="post.selectbool"ng-repeat="post in model.content.posts | orderBy:post.post_date:true" section-select="post,model.content.main,model.content.posts">
-	<h3>{{post.post_title}}</h3>
+<div class='part part-lg-h part-lg--h' ng-hide="post.selectbool"ng-repeat="post in model.content.posts | orderBy : 'lla_post_order' : false" section-select="post,model.content.main,model.content.posts">
+	<a ng-href='#/about/{{post.lla_part_slug}}'> 
+		<h3>{{post.post_title}}</h3>
+	</a>
 </div>
