--- a/inc/html/calender.html
+++ b/inc/html/calender.html
@@ -1,20 +1,20 @@
-<div class='part part-lg-h part-lg--h'>
+<div class='part part-lg-h part-lg--h' section-select-cal='-1'>
 	<!-- Viewed event -->
-	<h3>{{model.content.events.main.post_title}}</h3>
+	<h3>{{model.content.main.post_title}}</h3>
 	<ul>
-		<li>{{model.content.events.main.date_value}}</li>
-		<li>{{model.content.events.main.start_time_value}}</li>
-		<li>{{model.content.events.main.end_time_value}}</li>
-		<li>{{model.content.events.main.address_value}}</li>
+		<li>{{model.content.main.date_value}}</li>
+		<li>{{model.content.main.start_time_value}}</li>
+		<li>{{model.content.main.end_time_value}}</li>
+		<li>{{model.content.main.address_value}}</li>
 	</ul>
 </div>
 <div class='part part-lg-h part-lg--h'>
-	<p>{{model.content.events.main.post_content}}</p>
+	<p>{{model.content.main.post_content}}</p>
 </div>
 
-<div class='part part-lg-q part-lg--h' ng-repeat='event in model.content.events.list'>
-	<h3>{{event.post_title}}</h3>
-	<p>{{event.date_value}}</p>
+<div class='part part-lg-q part-lg--h' ng-hide='anevent.selected' ng-repeat='anevent in model.content.events' section-select-cal='{{$index}},{{anevent}}'  >
+	<h3>{{anevent.post_title}}</h3>
+	<p>{{anevent.date_value}}</p>
 </div>
 
 
