--- a/inc/html/calender.html
+++ b/inc/html/calender.html
@@ -12,7 +12,7 @@
 	<p>{{model.content.main.post_content}}</p>
 </div>
 
-<div class='part part-lg-q part-lg--h' ng-hide='anevent.selected' ng-repeat='anevent in model.content.events' section-select-cal='{{$index}},{{anevent}}'  >
+<div class='part part-lg-q part-lg--h' ng-hide='anevent.selectedbool' ng-repeat='anevent in model.content.events' section-select-cal='{{$index}},{{anevent}}'  >
 	<h3>{{anevent.post_title}}</h3>
 	<p>{{anevent.date_value}}</p>
 </div>
