Working contanct init

--- a/inc/html/about.html
+++ b/inc/html/about.html
@@ -1,15 +1,14 @@
 <!-- About -->
-<div class='part part-lg-h part-lg--h' section-select="model.content.main,model.content.posts,~" ng-show="model.content.main.selected">
+<div class='part part-lg-h part-lg--h' ng-show="model.content.main.selected">
 	<a ng-href='#/about/~'>
 		<h3>{{model.content.main.post.post_title}}</h3>
 	</a>
 </div>
 
-<div class='part part-lg-h part-lg--h' section-select ng-show="model.content.main.selected">
+<div class='part part-lg-h part-lg--h' ng-show="model.content.main.selected">
 	<p>{{model.content.main.post.post_content}}</p>
 </div>
-
-<div class='part part-lg-h part-lg--h' ng-hide="post.selectbool"ng-repeat="post in model.content.posts | orderBy : 'lla_post_order' : false" section-select="post,model.content.main,model.content.posts">
+<div class='part part-lg-h part-lg--h' ng-hide="post.selectbool" ng-repeat="post in model.content.posts | orderBy : 'lla_post_order' : false" > 
 	<a ng-href='#/about/{{post.lla_part_slug}}'> 
 		<h3>{{post.post_title}}</h3>
 	</a>
