--- a/inc/html/contact.html
+++ b/inc/html/contact.html
@@ -9,12 +9,24 @@
 </div>
 	<!-- contact form -->
 	<p> contact form </p>
-		<div class='part part-lg-h part-lg--h'ng-show="mail.showdialog">
-			<div class="alert alert-success" >
+		<div class='part part-lg-f part-lg--h'ng-show="mail.showdialog">
+			<div class="alert alert-info" ng-show='mail.loading'>
+					<button type="button" class="close" ng-click="mail.showdialog=false" data-dismiss="alert" aria-hidden="true">&times;</button>
+					<strong>Your Request is being Processed...</strong>
+			</div>
+			<div class="alert alert-success" ng-show='mail.success'>
 					<button type="button" class="close" ng-click="mail.showdialog=false" data-dismiss="alert" aria-hidden="true">&times;</button>
 					<strong>{{mail.returnmessage}}</strong>
-					<p ng-show='mail.success'>Send Another Message<p>
-					<p ng-hide='mail.success'>Please Try Again<p>
+			</div>
+			<div class="alert alert-danger" ng-show='mail.fail'>
+					<button type="button" class="close" ng-click="mail.showdialog=false" data-dismiss="alert" aria-hidden="true">&times;</button>
+					<p>Sorry there was a problem</p>
+					<ul>
+						<li ng-repeat='error in mail.errors'>
+							<strong>{{error.message}}</strong>
+						</li>
+					</ul>
+					<p >Please Try Again</p>
 			</div>
 		</div>
 	<form name="registerForm" role="form" ng-submit="submitMail()" novalidate>
@@ -35,8 +47,8 @@
 				<span ng-show="registerForm.message.$invalid && !registerForm.mail.$pristine" class="help-block">You must have a message</span>
 			</div>
 		</div>
-		<div class='part part-lg-h part-lg--h'>
-			<div class="form-group" ng-hide='mail.showdialog'>
+		<div class='part part-lg-h part-lg--h'ng-hide='mail.showdialog'>
+			<div class="form-group" >
 				<label>Captcha*</label>
 				<div re-captcha ng-model="mail.captcha"></div>
 			</div>
