--- a/inc/html/home_page.html
+++ b/inc/html/home_page.html
@@ -4,4 +4,4 @@
 <div id='home'class='section' ui-view='home'></div>
 <div id='about' class='section' ui-view='about' ></div>
 <div id='calender'class='section' ui-view='calender'></div>
-<div id='contact'class='section' ui-view='contact'></div>
+<div id='contact'class='section' ui-view='contact' contact-form-process></div>
