--- a/inc/html/about.html
+++ b/inc/html/about.html
@@ -1,12 +1,14 @@
-<!-- About -->
-<div class='part part-lg-h part-lg--h' ng-show="model.content.main.selectedbool">
-	<a ng-href='#/about/~'>
-		<h3>{{model.content.main.post_title}}</h3>
-	</a>
-</div>
+<!-- About e9e5e2 -->
+<div class = 'part part-lg-a part-lg--h paper-effect-border' ng-show="model.content.main.selectedbool">
+	<div class='part part-lg-h part-lg--f paper-inner' >
+		<a ng-href='#/about/~'>
+			<h3>{{model.content.main.post_title}}</h3>
+		</a>
+	</div>
 
-<div class='part part-lg-h part-lg--h' ng-show="model.content.main.selectedbool">
-	<p>{{model.content.main.post_content}}</p>
+	<div class='part part-lg-h part-lg--f paper-inner' >
+		<p>{{model.content.main.post_content}}</p>
+	</div>
 </div>
 <div class='part part-lg-h part-lg--h' ng-hide="post.selectedbool" ng-repeat="post in model.content.posts | orderBy : 'lla_post_order' : false" > 
 	<a ng-href='#/about/{{post.lla_part_slug}}'> 
