NIce scroll added

--- a/inc/html/about.html
+++ b/inc/html/about.html
@@ -6,7 +6,7 @@
 		</a>
 	</div>
 
-	<div class='part part-lg-h part-lg--f paper-inner' >
+	<div scrollable class='part part-lg-h part-lg--f paper-inner' >
 		<p>{{model.content.main.post_content}}</p>
 	</div>
 </div>
