--- a/inc/html/about.html
+++ b/inc/html/about.html
@@ -1,7 +1,7 @@
-<!-- About e9e5e2 -->
+<!-- About top -->
 <div class = 'part part-lg-a part-lg--h paper-effect-border' ng-show="model.content.main.selectedbool">
 	<div class='part part-lg-h part-lg--f paper-inner' >
-		<a ng-href='#/about/~'>
+		<a ng-href='#/about/~' n>
 			<h3>{{model.content.main.post_title}}</h3>
 		</a>
 	</div>
