--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -10,7 +10,9 @@
 	</ul>
 </div>
 <div class='part part-lg-h part-lg--h part-mpleft'>
-	<h2>Sense</h2>
+	<a ng-click=''>
+		<h2>Sense</h2>
+	</a>
 	<ul>
 		<!-- start of repeat in sense_nave -->
 		<li ng-repeat='nav in model.content[0].content.sense_nav'>
