--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -1,4 +1,4 @@
-<div  class='part part-lg-f part-lg--h part-noptop text-center'>
+<div  class='part part-top-padding part-lg-f part-lg--h part-noptop text-center'>
 	<h1 class='website-title '>{{model.blog_title}}</h1>
 
 	<ul class='quotes' quoutes>
@@ -9,7 +9,7 @@
 		</li>
 	</ul>
 </div>
-<div class='part part-lg-h part-lg--h part-mpleft'>
+<div class='part part-top-padding part-lg-h part-lg--h part-mpleft'>
 	<a ng-click=''>
 		<h2>Sense</h2>
 	</a>
