--- a/inc/html/calender.html
+++ b/inc/html/calender.html
@@ -1,4 +1,4 @@
-<div class='part part-lg-h part-lg--h' > 
+<div class='part part-top-padding part-lg-h part-lg--h' > 
 	<!-- Viewed event -->
 	<h3>{{model.content.main.post_title}}</h3>
 	<ul>
@@ -8,11 +8,11 @@
 		<li>{{model.content.main.address_value}}</li>
 	</ul>
 </div>
-<div class='part part-lg-h part-lg--h'>
+<div class='part part-top-padding part-lg-h part-lg--h'>
 	<p>{{model.content.main.post_content}}</p>
 </div>
 
-<div class='part part-lg-q part-lg--h' ng-hide='anevent.selectedbool' ng-repeat='anevent in model.content.events' >
+<div class='part part-top-padding part-lg-q part-lg--h' ng-hide='anevent.selectedbool' ng-repeat='anevent in model.content.events' >
 	<a ng-href='#/calender/{{anevent.lla_part_slug}}'> 
 	<h3>{{anevent.post_title}}</h3>
 	<p>{{anevent.date_value}}</p>
