--- a/inc/html/contact.html
+++ b/inc/html/contact.html
@@ -1,8 +1,8 @@
-<div class='part part-lg-h part-lg--t'>
+<div class='part part-top-padding part-lg-h part-lg--t'>
 	<!-- Viewed event -->
 	<h3>{{model.content.contact[0].post_content}}</h3>
 </div>
-<div class='part part-lg-h part-lg--t'>
+<div class='part part-top-padding part-lg-h part-lg--t'>
 	<ul class='contact-info'>
 		<li>{{model.content.contact[0].Email}}</li>
 		<li>{{model.content.contact[0].Post}}</li>
@@ -10,7 +10,7 @@
 	</ul>
 </div>
 	<!-- contact form -->
-		<div class='part part-lg-f part-lg--2t'ng-show="mailrequest.showdialog">
+		<div class='part part-top-padding part-lg-f part-lg--2t'ng-show="mailrequest.showdialog">
 			<div class="alert alert-info" ng-show='mailrequest.loading'>
 					<button type="button" class="close" ng-click="mailrequest.showdialog=false" data-dismiss="alert" aria-hidden="true">&times;</button>
 					<strong>Your Request is being Processed...</strong>
@@ -31,7 +31,7 @@
 			</div>
 		</div>
 	<form name="registerForm" role="form" ng-submit="submitMail()" novalidate>
-		<div class='part part-lg-h part-lg--2t' ng-hide='mailrequest.showdialog'>
+		<div class='part part-top-padding part-lg-h part-lg--2t' ng-hide='mailrequest.showdialog'>
 			<div class="form-group small-input" ng-class="{ 'has-error' : registerForm.email.$invalid && !registerForm.email.$pristine }"ng-hide='mailrequest.showdialog'>
 				<label for="email">Email address*</label>
 				<input type="email" class="form-control" name="email" ng-model="mail.email" required>
@@ -43,7 +43,7 @@
 				<span ng-show="registerForm.message.$invalid && !registerForm.mail.$pristine" class="help-block">You must have a message</span>
 			</div>
 		</div>
-		<div class='part part-lg-h part-lg--2t'ng-hide='mailrequest.showdialog'>
+		<div class='part part-top-padding part-lg-h part-lg--2t'ng-hide='mailrequest.showdialog'>
 			<div class="form-group small-input" ng-class="{ 'has-error' : registerForm.name.$invalid && !registerForm.name.$pristine }"ng-hide='mailrequest.showdialog'>
 				<label for="name">Your Name*</label>
 				<input type="text" class="form-control" name="name" ng-model="mail.name" required>
