--- a/inc/html/contact.html
+++ b/inc/html/contact.html
@@ -3,7 +3,7 @@
 	<h3>{{model.content.contact[0].post_content}}</h3>
 </div>
 <div class='part part-top-padding part-lg-h part-lg--t'>
-	<ul class='contact-info'>
+	<ul class='contact-info no-padding'>
 		<li>{{model.content.contact[0].Email}}</li>
 		<li>{{model.content.contact[0].Post}}</li>
 		<li>{{model.content.contact[0].Telephone}}</li>
