--- a/inc/html/calender.html
+++ b/inc/html/calender.html
@@ -14,7 +14,7 @@
 	<a ng-href="#/calender/{{model.content.main.lla_part_slug}}/full">Read More</a>
 </div>
 
-<div class='part part-top-padding part-lg-q part-lg--h' ng-hide='model.fullbool' ng-repeat='anevent in model.content.events' >
+<div class='part part-top-padding part-lg-q part-lg--h' ng-hide='anevent.selectedbool || model.fullbool ' ng-repeat='anevent in model.content.events' >
 	<a ng-href='#/calender/{{anevent.lla_part_slug}}'> 
 	<h3>{{anevent.post_title}}</h3>
 	<p>{{anevent.date_value}}</p>
