Fix of the gallery page

--- a/inc/html/gallery_page.html
+++ b/inc/html/gallery_page.html
@@ -1,5 +1,5 @@
 <div  class='section gallery' >
-	<div class='part part-top-padding part-lg-h part-lg--h' ng-hide="post.selectedbool" ng-repeat="post in model.content.posts | orderBy : 'lla_post_order' : false" > 
+	<div class='part  part-lg-r part-lg--f' ng-hide="post.selectedbool" ng-repeat="post in model.content.posts | orderBy : 'lla_post_order' : false" > 
 		
 		<a class='image-hover' ng-href='#/about/{{post.lla_part_slug}}'> 
 			<div class='overlay'>
