--- a/inc/html/gallery_page.html
+++ b/inc/html/gallery_page.html
@@ -1,13 +1,13 @@
-<div  class='section gallery' >
+<div  class='gallery' >
 	<div class='part  part-lg-r part-lg--f' ng-hide="post.selectedbool" ng-repeat="post in model.content.posts | orderBy : 'lla_post_order' : false" > 
 		
-		<a class='image-hover' ng-href='#/about/{{post.lla_part_slug}}'> 
 			<div class='overlay'>
-				<img ng-src="{{post.thumbnail}}" ng-show="{{post.thumbnailset}}" />	
+				<a class='image-hover' ng-href='#/gallery/{{post.lla_part_slug}}'> 
+				<img class='galleryimg' ng-src="{{post.thumbnail}}" ng-show="{{post.thumbnailset}}" />	
 				<div class='inner-text'>
 					<h3>{{post.post_title}}</h3>
 				</div>
+				</a>
 			</div>
-		</a>
 	</div>
 </div>
