--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -15,8 +15,8 @@
 	</a>
 	<ul>
 		<!-- start of repeat in sense_nave -->
-		<li ng-repeat='nav in model.content[0].content.sense_nav'>
-			<a ng-href="/{{nav.slug}}"> {{nav.name}}</a>
+		<li ng-repeat='nav in model.sense.content'>
+			<a ng-href="#/sense/{{nav.t_slug}}">{{nav.t_name}}</a>
 		</li>
 	</ul>
 </div>
