Fix of the url bug for sense

--- a/inc/html/sense.html
+++ b/inc/html/sense.html
@@ -11,7 +11,7 @@
 		<ul>
 			<!-- start of repeat in sense_nave -->
 			<li ng-repeat='nav in model.sense.content'>
-				<a ng-href="#/sense/{{nav.t_slug}}">{{nav.t_name}}</a>
+				<a ng-href="#/sense/{{nav.t_slug}}/">{{nav.t_name}}</a>
 			</li>
 		</ul>
 	</div>
