--- a/inc/html/sense.html
+++ b/inc/html/sense.html
@@ -1,10 +1,10 @@
-<div class='part part-lg-10 part-lg--f'>
-	<div class='part part-top-padding part-lg-f part-lg--h'>
+<div class='part part-top-padding part-lg-10 part-lg--f'>
+	<div class='part part-top-padding part-lg-f part-lg--h part-mpleft'>
 		<a href='#/home/'>
-			<h3>Home</h3>
+			<h2>Home</h2>
 		</a>
 	</div>
-	<div class='part part-top-padding part-lg-h part-lg--h part-mpleft'>
+	<div class='part part-top-padding part-lg-f part-lg--h part-mpleft'>
 		<a ng-click=''>
 			<h2>Sense</h2>
 		</a>
@@ -16,4 +16,4 @@
 		</ul>
 	</div>
 </div>
-<div ui-view ></div>
+<div ui-view class='hundered' ></div>
