Fix of the sense so it is the gallery and the close

--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -10,13 +10,5 @@
 	</ul>
 </div>
 <div class='part part-top-padding part-lg-h part-lg--h part-mpleft'>
-	<a ng-click=''>
-		<h2>Sense</h2>
-	</a>
-	<ul>
-		<!-- start of repeat in sense_nave -->
-		<li ng-repeat='nav in model.sense.content'>
-			<a ng-href="#/sense/{{nav.t_slug}}/">{{nav.t_name}}</a>
-		</li>
-	</ul>
+		<a ng-href="#/sense/gallery/"><h2>Sense</h2></a>
 </div>
