--- a/inc/html/calender.html
+++ b/inc/html/calender.html
@@ -21,7 +21,9 @@
 </div>
 <div class = 'part part-lg-a part-lg--a paper-effect-border animate fadIn' ng-show="model.fullbool">
 	<div class='part part-lg-f part-lg--f paper-inner text-center' ng-show='model.fullbool' scrollable >
-		<a ng-href="#/calender/{{model.content.main.lla_part_slug}}/~">Close</a>
+		<a ng-href="#/calender/{{model.content.main.lla_part_slug}}/~">
+			<button class='close'>x</button>
+		</a>
 		<h3>{{model.content.main.post_title}}</h3>
 		<ul>
 			<li>{{model.content.main.date_value}}</li>
