--- a/inc/html/sense.html
+++ b/inc/html/sense.html
@@ -5,15 +5,9 @@
 		</a>
 	</div>
 	<div class='part part-top-padding part-lg-f part-lg--h part-mpleft'>
-		<a ng-click=''>
-			<h2>Sense</h2>
+		<a >
+			<a ng-href="#/sense/gallery/"><h2>Sense</h2></a>
 		</a>
-		<ul>
-			<!-- start of repeat in sense_nave -->
-			<li ng-repeat='nav in model.sense.content'>
-				<a ng-href="#/sense/{{nav.t_slug}}/">{{nav.t_name}}</a>
-			</li>
-		</ul>
 	</div>
 </div>
 <div ui-view class='hundered' ></div>
