--- a/inc/html/sense.html
+++ b/inc/html/sense.html
@@ -1,12 +1,10 @@
-<div class='part part-top-padding part-lg-10 part-lg--f'>
-	<div class='part part-top-padding part-lg-f part-lg--h part-mpleft'>
-		<a href='#/home/'>
-			<h2>Home</h2>
-		</a>
+<div class='scrolltonull' scrolltonull >&lt;</div>
+<div class='part part-top-padding part-lg-q part-lg--f'>
+	<div class='part part-top-padding part-lg-f part-lg--h '>
 	</div>
-	<div class='part part-top-padding part-lg-f part-lg--h part-mpleft'>
-		<a >
-			<a ng-href="#/sense/gallery/"><h2>Sense</h2></a>
+	<div class='part part-top-padding part-lg-f part-lg--h text-center'>
+		<a href='#/home/'>
+			<h3>Home</h3>
 		</a>
 	</div>
 </div>
