--- a/inc/html/calender.html
+++ b/inc/html/calender.html
@@ -2,16 +2,21 @@
 <div class='part part-lg-h part-lg--h' ng-hide='model.fullbool' > 
 	<!-- Viewed event -->
 	<h3>{{model.content.main.post_title}}</h3>
-	<ul class='no-padding'>
-		<li>{{model.content.main.date_value}}</li>
-		<li>{{model.content.main.start_time_value}}</li>
-		<li>{{model.content.main.end_time_value}}</li>
-		<li>{{model.content.main.address_value}}</li>
-	</ul>
+	<img class='thumbnail-lg' ng-src="{{model.content.main.thumbnail}}" ng-show="{{model.content.main.thumbnailset}}" />	
 </div>
-<div class='part part-top-padding part-lg-h part-lg--h'ng-hide='model.fullbool' >
-	<p>{{model.content.main.event_desc_value}}</p>
-	<a ng-href="#/calender/{{model.content.main.lla_part_slug}}/full">Read More</a>
+<div scrollable class='part part-lg-h part-lg--h'ng-hide='model.fullbool' >
+	<div class='outercontent'>
+		<div class='innercontent'>
+			<ul class='no-padding'>
+				<li>{{model.content.main.date_value}}</li>
+				<li>{{model.content.main.start_time_value}}</li>
+				<li>{{model.content.main.end_time_value}}</li>
+				<li>{{model.content.main.address_value}}</li>
+			</ul>
+			<p>{{model.content.main.event_desc_value}}</p>
+			<a ng-href="#/calender/{{model.content.main.lla_part_slug}}/full">Read More</a>
+		</div>
+	</div>
 </div>
 
 <div class='part part-top-padding part-lg-q part-lg--h' ng-hide='anevent.selectedbool || model.fullbool ' ng-repeat='anevent in model.content.events' >
@@ -20,19 +25,19 @@
 	<p>{{anevent.date_value}}</p>
 </div>
 <div class = 'part part-lg-a part-lg--a paper-effect-border animate fadIn' ng-show="model.fullbool">
-	<div class='part part-lg-f part-lg--f paper-inner text-center' ng-show='model.fullbool' scrollable >
+	<div class='part part-lg-f part-lg--f paper-inner text-center content-padding' ng-show='model.fullbool' scrollable >
 		<a ng-href="#/calender/{{model.content.main.lla_part_slug}}/~">
 			<button class='close'>x</button>
 		</a>
 		<h3>{{model.content.main.post_title}}</h3>
-		<ul>
+		<ul class='nomargin'align = "center" >
 			<li>{{model.content.main.date_value}}</li>
 			<li>{{model.content.main.start_time_value}}</li>
 			<li>{{model.content.main.end_time_value}}</li>
 			<li>{{model.content.main.address_value}}</li>
 		</ul>
 		<img ng-src="{{model.content.main.thumbnail}}" ng-show="model.content.main.thumbnailset" />
-		<p>{{model.content.main.post_content}}</p>
+		<div ng-bind-html='model.content.main.post_content'></div>
 	</div>
 </div>
 
