--- a/inc/html/home_page.html
+++ b/inc/html/home_page.html
@@ -2,6 +2,6 @@
 <!-- inc/html/home_page.html-->
 <div id='topnav' ui-view='topnav'></div>
 <div id='home'class='section' ui-view='home'></div>
-<div id='about' class='section' ui-view='about' ></div>
+<div id='about' class='section' ui-view='about' quotes='waypointchange'></div>
 <div id='calender'class='section' ui-view='calender'></div>
 <div id='contact'class='section' ui-view='contact' contact-form-process></div>
