Fix of the sense title

--- a/inc/html/home.html
+++ b/inc/html/home.html
@@ -4,5 +4,5 @@
 	<h1 class='website-title animated fadeIn' quotes='off' ng-show='model.quote'>{{model.quote}}</h1>
 </div>
 <div class='part part-top-padding part-lg-h part-lg--h part-mpleft'>
-		<a ng-href="#/sense/gallery/"><h2>Sense</h2></a>
+	<a ng-href="#/sense/gallery/"><h2>Life drawing | Life sensing</h2></a>
 </div>
