--- a/inc/html/gallery_page.html
+++ b/inc/html/gallery_page.html
@@ -2,11 +2,11 @@
 	<div id='{{post.lla_part_slug}}' class='part part-lg-r part-lg--f text-center' ng-class="{' part-lg-f ': post.selectedbool}" ng-repeat="post in model.content.posts | orderBy : 'lla_post_order' : false">
 		<div class='part  part-lg-r part-lg--f' ng-hide="post.selectedbool"  ng-hide='post.selectedbool'> 
 					<a class='animated fadeIn' ng-href='#sense/gallery/{{post.lla_part_slug}}/full'> 
-					<img class='galleryimg' ng-src="{{post.thumbnail}}" ng-show="{{post.thumbnailset}}" />	
+					<img class='galleryimg verticalbaseline' ng-src="{{post.thumbnail}}" ng-show="{{post.thumbnailset}}" />	
 					</a>
 		</div>
 		<div class = 'part part-lg-f part-lg--f paper-effect-border animated stretchRight' ng-show="post.selectedbool">
-			<div class='part part-lg-f part-lg--f paper-inner text-center content-padding verticalmiddle animated fadeIn' ng-show='post.selectedbool' scrollable >
+			<div class='part part-lg-f part-lg--f paper-inner text-center content-padding animated fadeIn' ng-show='post.selectedbool' scrollable >
 				<a ng-href="#/sense/gallery/{{post.lla_part_slug}}/~">
 					<button class='close'>x</button>
 				</a>
